correcao de logo

--- a/descubra ciencia/Pages/index.html
+++ b/descubra ciencia/Pages/index.html
@@ -17,7 +17,7 @@
         <!-- Logo e título -->
         <header class="logo">
             <div class="logo-img">
-                <img src="Static/logo.png" alt="Logo Descubra Ciência" style="width: 340px; height: 340px; object-fit: contain;">
+                <img src="static/logo.png" alt="Logo Descubra Ciência" style="width: 340px; height: 340px; object-fit: contain;">
             </div>
             <h2>LOGIN</h2>
         </header>
