paginas funcionando corretamente e insercao da logo na aba do navegador

--- a/descubra ciencia/Pages/Home/categorias.html
+++ b/descubra ciencia/Pages/Home/categorias.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Descubra Ciência - Home</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="icon/logo2.png" />
 </head>
 
 <body>
@@ -14,12 +15,12 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo">
-        <img src="../../Static/logo.png" alt="Logo Descubra Ciência"
+        <img src="Photos/logo2.png" alt="Logo Descubra Ciência"
           style="width: 120px; height: 120px; object-fit: contain; display: block; margin: 0 auto 10px auto;">
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">🏠 Início</a></li>
+          <li><a href="home.html">🏠 Início</a></li>
           <li><a href="categorias.html" class="active">📑 Categorias</a></li>
           <li><a href="assistidos.html">📺 Mais assistidos</a></li>
           <li><a href="favoritos.html">⭐ Curtidos</a></li>
