--- a/descubra ciencia/Pages/Home/home.html
+++ b/descubra ciencia/Pages/Home/home.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Descubra Ciência - Home</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="icon/logo2.png" />
 </head>
 
 <body>
@@ -14,7 +15,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="logo">
-        <img src="../../Static/logo.png" alt="Logo Descubra Ciência"
+        <img src="Photos/logo2.png" alt="Logo Descubra Ciência"
           style="width: 120px; height: 120px; object-fit: contain; display: block; margin: 0 auto 10px auto;">
       </div>
       <nav>
