--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Entrando — Descubra Ciência</title>
     <!-- Redireciona para a página de login -->
     <meta http-equiv="refresh" content="0; url=descubra%20ciencia/Pages/index.html">
+    <link rel="icon" type="image/png" href="logo/logo.png" />
     <script>
       // Fallback via JavaScript — encodeURI cuida de espaços e caracteres especiais
       (function(){
